# project-shadai-parser

./: .env.example  .gitignore  LICENSE  MANIFEST.in  OPTIMIZATION_COMPLETE_SUMMARY.md  PERFORMANCE_ANALYSIS_AND_OPTIMIZATION_PLAN.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PROVIDER_MAPPING.md  README.md  example.py  example_batch_processor.py  example_with_di.py  llm_client.py  pyproject.toml  setup.py  test_semantic_chunker.py  test_table_extractor.py
agents/: __init__.py  image_agent.py  language_detector.py  metadata_schemas.py  text_chunker.py  utils_files.py
llm_providers/: __init__.py
parser_shadai/: __init__.py  llm_client.py
parser_shadai/agents/: __init__.py  async_processor.py  cache_manager.py  document_agent.py  image_agent.py  image_categories.py  interfaces.py  language_config.py  language_detector.py  main_agent.py  metadata_schemas.py  optimized_metadata_extractor.py  semantic_chunker.py  text_chunker.py  utils_files.py
parser_shadai/agents/strategies/: __init__.py  metadata_extractors.py  provider_factory.py
parser_shadai/domain/: __init__.py
parser_shadai/domain/entities/: __init__.py  chunk.py  document.py
parser_shadai/extractors/: __init__.py
parser_shadai/infrastructure/: __init__.py  container.py
parser_shadai/llm_providers/: __init__.py  anthropic.py  azure.py  base.py  bedrock.py  gemini.py  openai.py
parser_shadai/parsers/: __init__.py  image_parser.py  pdf_parser.py  table_extractor.py
parser_shadai/shared/: __init__.py
(+13 files in other folders)
